[package]
name = "scalar_map"
version = "0.1.0"
edition = "2021"
description = "`map` for scalar types"
license = "MIT"
repository = "https://github.com/Banyc/scalar_map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
"std" = []

[dependencies]
