[package]
name = "scalar_map_derive"
version = "0.1.0"
edition = "2021"
description = "derive for `scalar_map`"
license = "MIT"
repository = "https://github.com/Banyc/scalar_map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = "2.0.39"
